--- a/merkle/Cargo.toml
+++ b/merkle/Cargo.toml
@@ -5,6 +5,5 @@ edition = "2024"
 
 [dependencies]
 sha2 = "0.10"
-
-[dev-dependencies]
+serde = { version = "1.0", features = ["derive"] }
 hex = "0.4.3"
