--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -8,3 +8,5 @@ actix-web = "4"
 serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
 merkle = { path = "../merkle"}
+base64 = "0.22.1"
+hex = "0.4.3"
