--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -9,3 +9,8 @@ serde = { version = "1.0", features = ["derive"]}
 clap = { version = "4.0", features = ["derive"]}
 tokio = { version = "1", features = ["full"]}
 merkle = { path = "../merkle"}
+base64 = "0.22.1"
+anyhow = "1.0.100"
+urlencoding = "2.1.3"
+hex = "0.4.3"
+serde_json = "1.0.145"
