--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -10,3 +10,4 @@ tokio = { version = "1", features = ["full"] }
 merkle = { path = "../merkle"}
 base64 = "0.22.1"
 hex = "0.4.3"
+serde_json = "1.0.145"
