--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,9 @@ target
 /server/server_files/*
 /client/client_files/*
 
+# Claude code 
+CLAUDE.md
+
 # RustRover
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
