--- a/merkle/Cargo.toml
+++ b/merkle/Cargo.toml
@@ -6,4 +6,6 @@ edition = "2024"
 [dependencies]
 sha2 = "0.10"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 hex = "0.4.3"
+thiserror = "2.0"
