--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -5,8 +5,10 @@ edition = "2024"
 
 [dependencies]
 actix-web = "4"
+actix-multipart = "0.7"
 serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
+futures-util = "0.3"
 merkle = { path = "../merkle"}
 base64 = "0.22.1"
 hex = "0.4.3"
