--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -13,3 +13,6 @@ merkle = { path = "../merkle"}
 base64 = "0.22.1"
 hex = "0.4.3"
 serde_json = "1.0.145"
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+tracing-actix-web = "0.7"
